--- a/blog.html
+++ b/blog.html
@@ -312,7 +312,7 @@
         <div class="footer-copyright">
             <p>&copy; 2023 Old Royal Castle | Pratham Aryal All Right Reserved </p>
 			<a href = "mailto: prathambnks@gmail.com">Email ME!!</a>
-			<a href = "https://github.com/PrathamAryal23">My GITHUB!!</a>
+			<a href = "https://github.com/PrathamAryal23">My GITHUB Link!!</a>
         </div>
     </footer>
 
