changes in cv details hobbies

--- a/exercise/cv.html
+++ b/exercise/cv.html
@@ -70,8 +70,8 @@
                 Languages: English, Nepali, Hindi</td>
                 </tr>
                     <tr><td>
-                Hobbies: travel, writing poems, playing guitar and so on</td></tr>
-                 <tr><td>Learnt basic JavaScript, HTML, CSS.</td></tr>
+                Hobbies: travel, writing poems, playing guitar, Football</td></tr>
+                 <tr><td>Learnt basic JavaScript, HTML, CSS, Python</td></tr>
              </tbody>
          </table>
              </div> <!-- 2nd tab closed -->
