new changes in portfolio design and details

--- a/exercise/index.html
+++ b/exercise/index.html
@@ -3,7 +3,7 @@
    <head>
       <title>WEB DEVELOPMENT PORFOLIO</title>
       <meta charset="utf-8" />
-      <meta name="author" content="Sujan Aryal" />
+      <meta name="author" content="Pratham Aryal" />
     <meta name="description" content="Web development exercises" />
       <!-- Include meta elements here!  -->
 	   
@@ -36,7 +36,7 @@
     <!--   container holds everything inside -->
 <div class="row">
    <!-- Left logo Column -->
-   <div class="three columns"> <img src = "images/pratham.jpg" alt = "Sujan"  title="Sujan Aryal" /></div>
+   <div class="three columns"> <img src = "images/pratham.jpg" alt = "Pratham"  title="Pratham Aryal" /></div>
    
    <!-- Right header Column -->
 
