new changes in homepage

--- a/exercise/cv.html
+++ b/exercise/cv.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Curriculam Vitae CV</title>
-	<meta name="author" content="Sujan Aryal" />
+	<meta name="author" content="Pratham Aryal" />
     <meta charset="utf-8">
         <meta name="description" content="Web development exercises" />
        <meta name="description" content="Web development exercises" />
@@ -50,7 +50,7 @@
 
           <div class="tab-content active">
             <h3>Personal Information/Contact</h3>
-            <img src="pratham.jpg" alt="Sujan" title="Sujan Aryal" />
+            <img src="pratham.jpg" alt="Pratham" title="Pratham Aryal" />
             <p><STRONG>Name:</STRONG>   <em>Pratham Aryal</em></p>
                     <p><strong>Age:</strong>    22</p>
                     <p><strong>Height:</strong> 5'10ft</p>
